multipe fixes and optimizations

--- a/widgets/vis-3dmodel/css/style.css
+++ b/widgets/vis-3dmodel/css/style.css
@@ -2,3 +2,9 @@
 .vis-3dmodel-class {
     font-style: italic;
 }
+
+/* In Chrome hide border around model */
+canvas { 
+    outline: none; 
+    border: none;
+}
